--- a/index.html
+++ b/index.html
@@ -6,21 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
     <link rel="icon" type="image/x-icon" href="./imgsrc/IconMenma.svg" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./CSS/style.css" />
 
     <!--Fonts-->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Katibeh&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Karma:wght@300;400;500;600;700&family=Katibeh&display=swap"
-      rel="stylesheet"
-    />
+    <!--Fonts-->
   </head>
 
   <header>
@@ -30,61 +19,5 @@
   </header>
 
   <body>
-    <section id="ContainerWrapper">
-      <div class="herobox">
-        <div class="HeroImage">
-          <img
-            src="./imgsrc/448533641_1429592894350031_380198371122129485_n.jpg"
-            class="profile"
-          />
-        </div>
-        <div class="HeroTitle">
-          <h1>Christian Emmanuel Collo</h1>
-          <h2>Web developer, Graphic designer, 3D artist</h2>
-        </div>
-        <div class="HeroCTA">
-          <button>Hire me</button>
-        </div>
-      </div>
-
-      <div class="gallery">
-        <div class="gallerycontainer">
-          <div class="gallerytitle">
-            <img src="./imgsrc/Scroll.png" />
-          </div>
-          <div class="galleryboxwrapper">
-            <div class="container">
-              <div class="titlewrapper">
-              <h1>Web Development</h1>
-              <div class="iconcontainer">
-                <img src="./imgsrc/WebdevIcons/html.png" />
-                <img src="./imgsrc/WebdevIcons/css.png" />
-                <img src="./imgsrc/WebdevIcons/javascript.png" />
-                <img src="./imgsrc/WebdevIcons/c++.png" />
-                <img src="./imgsrc/WebdevIcons/csharp.png" />
-                <img src="./imgsrc/WebdevIcons/python.png" />
-              </div>
-           </div>
-            <div class="gallerywrapper">
-              <div class="gallerycards">
-                <div class="gallerycardscontainer">
-                    <img src="./imgsrc/placeholder image.png" />
-                    <h1>Project name</h1>
-                    <h2>
-                      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                      eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                    </h2>
-                    <div class="button">
-                      <button>Learn more</button>
-                  </div>
-                </div>
-              </div>
-            </div>
-            
-            </div>
-            
-        </div>
-      </div>
-    </div>
   </body>
 </html>
