Creating the body

--- a/index.html
+++ b/index.html
@@ -1,23 +1,42 @@
 <!DOCTYPE html>
 
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My Portfolio</title>
-    <link rel="icon" type="image/x-icon" href="./imgsrc/IconMenma.svg" />
-    <link rel="stylesheet" href="./CSS/style.css" />
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>My Portfolio</title>
+		<link rel="icon" type="image/x-icon" href="./imgsrc/IconMenma.svg" />
+		<link rel="stylesheet" href="./CSS/style.css" />
+		<link rel="stylesheet" href="./CSS/Title.css" />
+		<link rel="stylesheet" href="./CSS/Welcome.css" />
 
-    <!--Fonts-->
-    <!--Fonts-->
-  </head>
+		<!--Fonts-->
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Italiana&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Judson:ital,wght@0,400;0,700;1,400&display=swap"
+			rel="stylesheet"
+		/>
+		<!--Fonts-->
+	</head>
+	<body>
+		<div class="title">
+			<h1>Christian Collo</h1>
+			<h4>I proudly present to you my wonderful crafts</h4>
+		</div>
 
-  <header>
-    <div class="header">
-      <p>My Portfolio</p>
-    </div>
-  </header>
-
-  <body>
-  </body>
+		<div class="welcome">
+			<div class="profile">
+				<img src="">
+			</div>
+			<h1>Welcome</h1>
+			<p>It's nice to meet you. To put it simply, I'm a 3D artist, designer, programmer, and game developer. With a varied skill set that includes visual arts, design, coding, and game development, I am committed to bringing creativity and imagination to each project.</p>
+		</div>
+	</body>
 </html>
