Finishing the welcome section of the page

--- a/index.html
+++ b/index.html
@@ -33,10 +33,36 @@
 
 		<div class="welcome">
 			<div class="profile">
-				<img src="">
+				<svg
+					xmlns="http://www.w3.org/2000/svg"
+					width="345"
+					height="687"
+					viewBox="0 0 345 687"
+					fill="none"
+				>
+					<path
+						fill-rule="evenodd"
+						clip-rule="evenodd"
+						d="M340 514.5V203.5C340 110.992 265.008 36 172.5 36C79.9923 36 5 110.992 5 203.5V514.5C5 607.008 79.9923 682 172.5 682C265.008 682 340 607.008 340 514.5ZM172.5 31C77.2309 31 0 108.231 0 203.5V514.5C0 609.769 77.2309 687 172.5 687C267.769 687 345 609.769 345 514.5V203.5C345 108.231 267.769 31 172.5 31Z"
+						fill="#1A1A1A"
+					/>
+					<path
+						d="M208 34.9996C181.75 39.8327 177.833 43.7503 173 70C168.167 43.7503 164.25 39.8327 138 34.9996C164.25 30.1673 168.167 26.2505 173 0C177.833 26.2505 181.75 30.1673 208 34.9996Z"
+						fill="#1A1A1A"
+					/>
+				</svg>
+				<img src="./imgsrc/emman.png" />
 			</div>
-			<h1>Welcome</h1>
-			<p>It's nice to meet you. To put it simply, I'm a 3D artist, designer, programmer, and game developer. With a varied skill set that includes visual arts, design, coding, and game development, I am committed to bringing creativity and imagination to each project.</p>
+			<div class="label">
+				<h1>Welcome</h1>
+				<p>
+					It's nice to meet you. To put it simply, I'm a 3D artist,
+					designer, programmer, and game developer. With a varied
+					skill set that includes visual arts, design, coding, and
+					game development, I am committed to bringing creativity and
+					imagination to each project.
+				</p>
+			</div>
 		</div>
 	</body>
 </html>
