Adding the gallery section

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<link rel="stylesheet" href="./CSS/style.css" />
 		<link rel="stylesheet" href="./CSS/Title.css" />
 		<link rel="stylesheet" href="./CSS/Welcome.css" />
+		<link rel="stylesheet" href="./CSS/Gallery.css" />
 
 		<!--Fonts-->
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -63,6 +64,39 @@
 					imagination to each project.
 				</p>
 			</div>
+		</div>
+
+		<div class="gallery">
+			<div class="gallery_title">
+				<h1>My Gallery</h1>
+				<svg
+					xmlns="http://www.w3.org/2000/svg"
+					width="1142"
+					height="77"
+					viewBox="0 0 1142 77"
+					fill="none"
+				>
+					<path
+						fill-rule="evenodd"
+						clip-rule="evenodd"
+						d="M1105 40H37V35H1105V40Z"
+						fill="#1A1A1A"
+					/>
+					<path
+						d="M533 38.2366C560.75 43.5167 564.891 47.7966 570 76.474C575.109 47.7966 579.249 43.5167 607 38.2366C579.249 32.9573 575.109 28.6783 570 0C564.891 28.6783 560.75 32.9573 533 38.2366Z"
+						fill="#1A1A1A"
+					/>
+					<path
+						d="M1068 38.2367C1095.75 41.5189 1099.89 44.1794 1105 62.0059C1110.11 44.1794 1114.25 41.5189 1142 38.2367C1114.25 34.955 1110.11 32.2951 1105 14.468C1099.89 32.2951 1095.75 34.955 1068 38.2367Z"
+						fill="#1A1A1A"
+					/>
+					<path
+						d="M0 38.4198C27.7497 41.702 31.8911 44.3625 36.9996 62.189C42.1089 44.3625 46.2495 41.702 74 38.4198C46.2495 35.1381 42.1089 32.4782 37.0004 14.6511C31.8911 32.4782 27.7497 35.1381 0 38.4198Z"
+						fill="#1A1A1A"
+					/>
+				</svg>
+			</div>
+			<div class="gallery_collection"></div>
 		</div>
 	</body>
 </html>
