Fixing the text alignment of that stupid title bar

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>My Portfolio</title>
 		<link rel="icon" type="image/x-icon" href="./imgsrc/IconMenma.svg" />
-		<link rel="stylesheet" href="./CSS/style.css" />
-		<link rel="stylesheet" href="./CSS/Title.css" />
-		<link rel="stylesheet" href="./CSS/Welcome.css" />
-		<link rel="stylesheet" href="./CSS/Gallery.css" />
+		<link rel="stylesheet" href="./SCSS/style.css" />
+		<link rel="stylesheet" href="./SCSS/Title.css" />
+		<link rel="stylesheet" href="./SCSS/Welcome.css" />
+		<link rel="stylesheet" href="./SCSS/Gallery.css" />
 
 		<!--Fonts-->
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -27,7 +27,7 @@
 		<!--Fonts-->
 	</head>
 	<body>
-		<div class="title">
+		<div class="Title_section">
 			<h1>Christian Collo</h1>
 			<h4>I proudly present to you my wonderful crafts</h4>
 		</div>
@@ -96,7 +96,16 @@
 					/>
 				</svg>
 			</div>
-			<div class="gallery_collection"></div>
+			<div class="gallery_collection">
+				<div class="WebDev">
+					<div class="subTitle">
+						<h1>Web Development</h1>
+					</div>
+					<div class="container">
+						<div class="card"></div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</body>
 </html>
