Design revision on the galler. Adding a navigation menu for each gallery

--- a/index.html
+++ b/index.html
@@ -1,111 +1,116 @@
 <!DOCTYPE html>
 
 <html>
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>My Portfolio</title>
-		<link rel="icon" type="image/x-icon" href="./imgsrc/IconMenma.svg" />
-		<link rel="stylesheet" href="./SCSS/style.css" />
-		<link rel="stylesheet" href="./SCSS/Title.css" />
-		<link rel="stylesheet" href="./SCSS/Welcome.css" />
-		<link rel="stylesheet" href="./SCSS/Gallery.css" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My Portfolio</title>
+    <link rel="icon" type="image/x-icon" href="./imgsrc/IconMenma.svg" />
+    <link rel="stylesheet" href="./SCSS/style.css" />
+    <link rel="stylesheet" href="./SCSS/Title.css" />
+    <link rel="stylesheet" href="./SCSS/Welcome.css" />
+    <link rel="stylesheet" href="./SCSS/Gallery.css" />
 
-		<!--Fonts-->
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Italiana&display=swap"
-			rel="stylesheet"
-		/>
-		<link rel="preconnect" href="https://fonts.googleapis.com" />
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Judson:ital,wght@0,400;0,700;1,400&display=swap"
-			rel="stylesheet"
-		/>
-		<!--Fonts-->
-	</head>
-	<body>
-		<div class="Title_section">
-			<h1>Christian Collo</h1>
-			<h4>I proudly present to you my wonderful crafts</h4>
-		</div>
+    <!--Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Italiana&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Judson:ital,wght@0,400;0,700;1,400&display=swap"
+      rel="stylesheet"
+    />
+    <!--Fonts-->
+  </head>
+  <body>
+    <div class="Title_section">
+      <h1>Christian Collo</h1>
+      <h4>I proudly present to you my wonderful crafts</h4>
+    </div>
 
-		<div class="welcome">
-			<div class="profile">
-				<svg
-					xmlns="http://www.w3.org/2000/svg"
-					width="345"
-					height="687"
-					viewBox="0 0 345 687"
-					fill="none"
-				>
-					<path
-						fill-rule="evenodd"
-						clip-rule="evenodd"
-						d="M340 514.5V203.5C340 110.992 265.008 36 172.5 36C79.9923 36 5 110.992 5 203.5V514.5C5 607.008 79.9923 682 172.5 682C265.008 682 340 607.008 340 514.5ZM172.5 31C77.2309 31 0 108.231 0 203.5V514.5C0 609.769 77.2309 687 172.5 687C267.769 687 345 609.769 345 514.5V203.5C345 108.231 267.769 31 172.5 31Z"
-						fill="#1A1A1A"
-					/>
-					<path
-						d="M208 34.9996C181.75 39.8327 177.833 43.7503 173 70C168.167 43.7503 164.25 39.8327 138 34.9996C164.25 30.1673 168.167 26.2505 173 0C177.833 26.2505 181.75 30.1673 208 34.9996Z"
-						fill="#1A1A1A"
-					/>
-				</svg>
-				<img src="./imgsrc/emman.png" />
-			</div>
-			<div class="label">
-				<h1>Welcome</h1>
-				<p>
-					It's nice to meet you. To put it simply, I'm a 3D artist,
-					designer, programmer, and game developer. With a varied
-					skill set that includes visual arts, design, coding, and
-					game development, I am committed to bringing creativity and
-					imagination to each project.
-				</p>
-			</div>
-		</div>
+    <div class="welcome">
+      <div class="profile">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="345"
+          height="687"
+          viewBox="0 0 345 687"
+          fill="none"
+        >
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M340 514.5V203.5C340 110.992 265.008 36 172.5 36C79.9923 36 5 110.992 5 203.5V514.5C5 607.008 79.9923 682 172.5 682C265.008 682 340 607.008 340 514.5ZM172.5 31C77.2309 31 0 108.231 0 203.5V514.5C0 609.769 77.2309 687 172.5 687C267.769 687 345 609.769 345 514.5V203.5C345 108.231 267.769 31 172.5 31Z"
+            fill="#1A1A1A"
+          />
+          <path
+            d="M208 34.9996C181.75 39.8327 177.833 43.7503 173 70C168.167 43.7503 164.25 39.8327 138 34.9996C164.25 30.1673 168.167 26.2505 173 0C177.833 26.2505 181.75 30.1673 208 34.9996Z"
+            fill="#1A1A1A"
+          />
+        </svg>
+        <img src="./imgsrc/emman.png" />
+      </div>
+      <div class="label">
+        <h1>Welcome</h1>
+        <p>
+          It's nice to meet you. To put it simply, I'm a 3D artist, designer,
+          programmer, and game developer. With a varied skill set that includes
+          visual arts, design, coding, and game development, I am committed to
+          bringing creativity and imagination to each project.
+        </p>
+      </div>
+    </div>
 
-		<div class="gallery">
-			<div class="gallery_title">
-				<h1>My Gallery</h1>
-				<svg
-					xmlns="http://www.w3.org/2000/svg"
-					width="1142"
-					height="77"
-					viewBox="0 0 1142 77"
-					fill="none"
-				>
-					<path
-						fill-rule="evenodd"
-						clip-rule="evenodd"
-						d="M1105 40H37V35H1105V40Z"
-						fill="#1A1A1A"
-					/>
-					<path
-						d="M533 38.2366C560.75 43.5167 564.891 47.7966 570 76.474C575.109 47.7966 579.249 43.5167 607 38.2366C579.249 32.9573 575.109 28.6783 570 0C564.891 28.6783 560.75 32.9573 533 38.2366Z"
-						fill="#1A1A1A"
-					/>
-					<path
-						d="M1068 38.2367C1095.75 41.5189 1099.89 44.1794 1105 62.0059C1110.11 44.1794 1114.25 41.5189 1142 38.2367C1114.25 34.955 1110.11 32.2951 1105 14.468C1099.89 32.2951 1095.75 34.955 1068 38.2367Z"
-						fill="#1A1A1A"
-					/>
-					<path
-						d="M0 38.4198C27.7497 41.702 31.8911 44.3625 36.9996 62.189C42.1089 44.3625 46.2495 41.702 74 38.4198C46.2495 35.1381 42.1089 32.4782 37.0004 14.6511C31.8911 32.4782 27.7497 35.1381 0 38.4198Z"
-						fill="#1A1A1A"
-					/>
-				</svg>
-			</div>
-			<div class="gallery_collection">
-				<div class="WebDev">
-					<div class="subTitle">
-						<h1>Web Development</h1>
-					</div>
-					<div class="container">
-						<div class="card"></div>
-					</div>
+    <div class="gallery">
+      <div class="gallery_title">
+        <h1>My Gallery</h1>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          width="1142"
+          height="77"
+          viewBox="0 0 1142 77"
+          fill="none"
+        >
+          <path
+            fill-rule="evenodd"
+            clip-rule="evenodd"
+            d="M1105 40H37V35H1105V40Z"
+            fill="#1A1A1A"
+          />
+          <path
+            d="M533 38.2366C560.75 43.5167 564.891 47.7966 570 76.474C575.109 47.7966 579.249 43.5167 607 38.2366C579.249 32.9573 575.109 28.6783 570 0C564.891 28.6783 560.75 32.9573 533 38.2366Z"
+            fill="#1A1A1A"
+          />
+          <path
+            d="M1068 38.2367C1095.75 41.5189 1099.89 44.1794 1105 62.0059C1110.11 44.1794 1114.25 41.5189 1142 38.2367C1114.25 34.955 1110.11 32.2951 1105 14.468C1099.89 32.2951 1095.75 34.955 1068 38.2367Z"
+            fill="#1A1A1A"
+          />
+          <path
+            d="M0 38.4198C27.7497 41.702 31.8911 44.3625 36.9996 62.189C42.1089 44.3625 46.2495 41.702 74 38.4198C46.2495 35.1381 42.1089 32.4782 37.0004 14.6511C31.8911 32.4782 27.7497 35.1381 0 38.4198Z"
+            fill="#1A1A1A"
+          />
+        </svg>
+      </div>
+      <div class="gallery_collection">
+				<div class="subTitle">
+					<h1>Web Development</h1>
+					<svg xmlns="http://www.w3.org/2000/svg" width="20" height="32" viewBox="0 0 20 32" fill="none">
+						<path d="M20 15.9998C12.5001 18.2092 11.3808 20.0001 10.0001 32C8.61923 20.0001 7.50014 18.2092 0 15.9998C7.50014 13.7908 8.61923 12.0002 9.99989 0C11.3808 12.0002 12.5001 13.7908 20 15.9998Z" fill="#1A1A1A"/>
+					</svg>
+					<h1>Grahpic Design</h1>
+					<svg xmlns="http://www.w3.org/2000/svg" width="20" height="32" viewBox="0 0 20 32" fill="none">
+						<path d="M20 15.9998C12.5001 18.2092 11.3808 20.0001 10.0001 32C8.61923 20.0001 7.50014 18.2092 0 15.9998C7.50014 13.7908 8.61923 12.0002 9.99989 0C11.3808 12.0002 12.5001 13.7908 20 15.9998Z" fill="#1A1A1A"/>
+					</svg>
+					<h1>3D Modeling</h1>
 				</div>
-			</div>
-		</div>
-	</body>
+				<div class="cards_collection">
+					<div class="cards"></div>
+				</div>
+      </div>
+    </div>
+  </body>
 </html>
