--- a/index.html
+++ b/index.html
@@ -108,7 +108,32 @@
 					<h1>3D Modeling</h1>
 				</div>
 				<div class="cards_collection">
-					<div class="cards"></div>
+					<div class="cards">
+						<div class="outer_shell">
+							<div class="inner_shell"></div>
+						</div>
+					</div>
+					<div class="cards">
+						<div class="outer_shell">
+							<div class="inner_shell"></div>
+						</div>
+					</div>
+					<div class="cards">
+						<div class="outer_shell">
+							<div class="inner_shell"></div>
+						</div>
+					</div>
+					<div class="cards_collection">
+						<div class="cards">
+							<div class="outer_shell">
+								<div class="inner_shell"></div>
+							</div>
+						</div>
+						<div class="cards">
+							<div class="outer_shell">
+								<div class="inner_shell"></div>
+							</div>
+						</div>
 				</div>
       </div>
     </div>
